--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@remixicon/react": "^4.8.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "react": "^19.1.1",
